# lessy

./: .gitignore  11.2._controlling_how_tests_are_run.md  2.md  Cargo.toml  README.md  References.md  base_case.md  input.txt  input_1.md  input_commented.txt  main.rs  output.md
backup/: output_uncommented.md
backup/src copy/: com.rs  lib.rs  main.rs  process.rs
backup/src copy 2/: com.rs  init.rs  lib.rs  main.rs
cli/src/: data_processing.rs  file_utils.rs  main.rs
input/: input.txt
origin/snippet_release_version/: 1.0.0.md  1.0.1.md  1.0.10.md  1.0.2.md  1.0.3.md  1.0.4.md  1.0.5_current.md  1.0.6_experiment.md  1.0.7.md  1.0.8.md  1.0.9.md
origin/text_simplifier/: 11.2._controlling_how_tests_are_run.md  test.txt
origin/text_simplifier/src/: main.rs  temp.md
output/: output.md
src/: data_processing.rs  file_utils.rs  init.rs  lib.rs  main.rs  process.rs  test_module.rs  util.rs
tests/: backup.md  data_processing.rs  input.txt  tests.rs
